--- a/renderer/main.html
+++ b/renderer/main.html
@@ -26,6 +26,7 @@
     <script>
       // You can also require other files to run in this process
       require('./app.js')
+      require('./menu.js')
     </script>
   </body>
 </html>
